# synthese

./: .gitignore  CMakeLists.txt  CUBE.cpp  CUBE.h  Cube.cpp  Cube.h  face.cpp  face.h  facedouble.cpp  facedouble.h  facegenrique.cpp  facegenrique.h  facetriple.cpp  facetriple.h  main.cpp  strvertex.h
Model/: Facetriple.cpp  Facetriple.h
shader/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  shader.cpp
src/: glad.c
